--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,13 @@
   background-color: black;
 }
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  overflow-wrap: break-word;
 }
 
 main {
